[package]
name = "queue-rust"
version = "0.1.0"
authors = ["bruno"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", rev = "f92e43a9e252cf0fe552c5420eb41005e454140a", features = ["build_bindgen","ssl"] }
futures = "0.1"